--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -154,6 +154,7 @@ social_icons:
 # in theme directory(source/images): /images/avatar.jpg
 # in site  directory(source/uploads): /uploads/avatar.jpg
 #avatar:
+avatar: /images/avatar.webp
 
 
 # Table Of Contents in the Sidebar
