--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,14 @@
 
 # Site
 title: Memphis' Talk
-subtitle: words that cross the skills and the mind
-description: Memphis 的技术小站还有他所认识的世界
-author: Memphis Wang
+subtitle: and the world he knows
+description: 誰說不能讓我此生唯一自傳, 如同詩一般
+author: Memphis.W
 #language: zh-CN
 language: zh-Hans
 timezone: Asia/Shanghai
+avatar: /images/avatar.webp
+duoshuo_shortname: memphisw
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
