--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -344,9 +344,9 @@ facebook_comments_plugin:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: EWpp4D6zzqG5OmJMFM9e8wn8-gzGzoHsz
+  app_key: Mkms4nBRwfI1ag280IeTEjeO
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
