--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -132,8 +132,10 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
+social:
   #LinkLabel: Link
+  GitHub: https://github.com/steve-jokes
+  微博: http://weibo.com/RunLittleRabbitRun
 
 
 # Social Links Icons
