添加友情链接

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -191,11 +191,12 @@ sidebar:
 
 
 # Blogrolls
-#links_title: Links
-#links_layout: block
-#links_layout: inline
-#links:
-  #Title: http://example.com/
+links_title: Links
+links_layout: block
+links_layout: inline
+links:
+  Ryeeeeee: http://ryeeeeee.com/
+  Chris Ye: http://strawdog.top/
 
 
 # ---------------------------------------------------------------
