--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -273,7 +273,7 @@ mathjax:
 #duoshuo_shortname:
 
 # Disqus
-#disqus_shortname:
+disqus_shortname: memphis-talk
 
 # Hypercomments
 #hypercomments_id:
